--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "PICycleTimeChart",
-  "version": "1.0.7",
+  "name": "PICycleTime",
+  "version": "1.0.8",
   "private": true,
   "devDependencies": {
       "grunt": "1.0.1",
