--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "PICycleTime",
-  "version": "1.0.10",
+  "version": "1.1.0",
   "private": true,
+  "repository": "https://github.com/CustomAgile/PICycleTime",
   "devDependencies": {
     "grunt": "1.0.1",
     "grunt-cli": "1.2.0",
@@ -9,6 +10,9 @@
     "grunt-contrib-jshint": "1.1.0",
     "grunt-contrib-connect": "1.0.2",
     "rally-sdk2-test-utils": "0.1.2"
+  },
+  "dependencies": {
+    "@customagile/ancestor-pi-multi-level-pi-app-filter": "git+https://github.com/CustomAgile/utils-ancestor-pi-app-filter.git"
   },
   "scripts": {
     "test": "npm i && grunt test",
